fix: revert ESM imports/exports to cater CJS workflows (#461)
* fix: revert ESM imports/exports to cater CJS workflows

* chore: update ESLint to reflect change in imports

* chore: switch to use yalc instead of yarn link for tests

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,8 +12,7 @@
     {
       "files": ["client/**/*.js", "overlay/**/*.js", "lib/runtime/**/*.js", "sockets/**/*.js"],
       "parserOptions": {
-        "ecmaVersion": 2015,
-        "sourceType": "module"
+        "ecmaVersion": 2015
       },
       "env": {
         "browser": true,
