--- a/examples/create-react-app/package.json
+++ b/examples/create-react-app/package.json
@@ -7,7 +7,7 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.0-rc.0",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.0-rc.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "customize-cra": "^1.0.0",
@@ -22,9 +22,9 @@
     "eject": "react-app-rewired eject"
   },
   "resolutions": {
-    "browserslist": "^4.16.6",
-    "postcss": "^7.0.36",
-    "webpack": "^4.46.0"
+    "browserslist": "4.16.7",
+    "postcss": "7.0.36",
+    "webpack": "4.46.0"
   },
   "eslintConfig": {
     "extends": "react-app"
