--- a/examples/typescript-with-swc/package.json
+++ b/examples/typescript-with-swc/package.json
@@ -7,7 +7,8 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.0-rc.0",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.0-rc.3",
+    "@swc/core": "^1.2.76",
     "@types/react": "^17.0.13",
     "@types/react-dom": "^17.0.8",
     "cross-env": "^7.0.3",
