fix: resolve module system upwards from resource path (#492)

--- a/package.json
+++ b/package.json
@@ -56,8 +56,10 @@
   },
   "dependencies": {
     "ansi-html": "^0.0.7",
+    "common-path-prefix": "^3.0.0",
     "core-js-pure": "^3.8.1",
     "error-stack-parser": "^2.0.6",
+    "find-up": "^5.0.0",
     "html-entities": "^2.1.0",
     "loader-utils": "^2.0.0",
     "schema-utils": "^3.0.0",
