--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pmmmwh/react-refresh-webpack-plugin",
-  "version": "0.5.0-rc.6",
+  "version": "0.5.0",
   "description": "An **EXPERIMENTAL** Webpack plugin to enable \"Fast Refresh\" (also previously known as _Hot Reloading_) for React components.",
   "keywords": [
     "react",
@@ -70,7 +70,7 @@
     "@babel/plugin-transform-modules-commonjs": "^7.14.0",
     "@types/cross-spawn": "^6.0.2",
     "@types/fs-extra": "^9.0.4",
-    "@types/jest": "^26.0.23",
+    "@types/jest": "^27.0.1",
     "@types/json-schema": "^7.0.6",
     "@types/module-alias": "^2.0.0",
     "@types/node": "^16.0.0",
@@ -98,8 +98,8 @@
     "puppeteer": "^9.1.1",
     "react-refresh": "^0.10.0",
     "sourcemap-validator": "^2.1.0",
-    "type-fest": "^1.2.1",
-    "typescript": "4.3.5",
+    "type-fest": "^1.4.0",
+    "typescript": "4.4.3",
     "webpack": "^5.42.0",
     "webpack-cli": "^4.7.2",
     "webpack-cli.legacy": "npm:webpack-cli@3.x",
@@ -116,7 +116,7 @@
     "sockjs-client": "^1.4.0",
     "type-fest": ">=0.17.0 <2.0.0",
     "webpack": ">=4.43.0 <6.0.0",
-    "webpack-dev-server": "3.x || >=4.0.0-beta.0",
+    "webpack-dev-server": "3.x || 4.x",
     "webpack-hot-middleware": "2.x",
     "webpack-plugin-serve": "0.x || 1.x"
   },
