--- a/examples/create-react-app/package.json
+++ b/examples/create-react-app/package.json
@@ -7,9 +7,9 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.0-rc.3",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.0",
     "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^12.0.0",
+    "@testing-library/react": "^12.1.0",
     "customize-cra": "^1.0.0",
     "react-app-rewired": "^2.1.8",
     "react-refresh": "^0.10.0",
@@ -22,7 +22,7 @@
     "eject": "react-app-rewired eject"
   },
   "resolutions": {
-    "browserslist": "4.16.7",
+    "browserslist": "4.17.0",
     "postcss": "7.0.36",
     "webpack": "4.46.0"
   },
