--- a/examples/typescript-with-swc/package.json
+++ b/examples/typescript-with-swc/package.json
@@ -7,18 +7,18 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.0-rc.3",
-    "@swc/core": "^1.2.76",
-    "@types/react": "^17.0.13",
-    "@types/react-dom": "^17.0.8",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.0",
+    "@swc/core": "^1.2.85",
+    "@types/react": "^17.0.20",
+    "@types/react-dom": "^17.0.9",
     "cross-env": "^7.0.3",
-    "fork-ts-checker-webpack-plugin": "^6.2.12",
+    "fork-ts-checker-webpack-plugin": "^6.3.3",
     "html-webpack-plugin": "^5.3.2",
     "react-refresh": "^0.10.0",
     "swc-loader": "^0.1.14",
-    "typescript": "4.3.5",
-    "webpack": "^5.42.0",
-    "webpack-cli": "^4.7.2",
+    "typescript": "4.4.3",
+    "webpack": "^5.52.1",
+    "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^3.11.2"
   },
   "scripts": {
