--- a/examples/webpack-hot-middleware/package.json
+++ b/examples/webpack-hot-middleware/package.json
@@ -7,17 +7,17 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.6",
-    "@babel/preset-env": "^7.14.7",
+    "@babel/core": "^7.15.5",
+    "@babel/preset-env": "^7.15.6",
     "@babel/preset-react": "^7.14.5",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.0-rc.3",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.0",
     "babel-loader": "^8.2.2",
     "cross-env": "^7.0.3",
     "express": "^4.17.1",
     "html-webpack-plugin": "^5.3.2",
     "react-refresh": "^0.10.0",
-    "webpack": "^5.42.0",
-    "webpack-dev-middleware": "^5.0.0",
+    "webpack": "^5.52.1",
+    "webpack-dev-middleware": "^5.1.0",
     "webpack-hot-middleware": "^2.25.0"
   },
   "scripts": {
