--- a/examples/webpack-plugin-serve/package.json
+++ b/examples/webpack-plugin-serve/package.json
@@ -7,17 +7,17 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.6",
-    "@babel/preset-env": "^7.14.7",
+    "@babel/core": "^7.15.5",
+    "@babel/preset-env": "^7.15.6",
     "@babel/preset-react": "^7.14.5",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.0-rc.3",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.0",
     "babel-loader": "^8.2.2",
     "cross-env": "^7.0.3",
-    "html-webpack-plugin": "^4.5.2",
+    "html-webpack-plugin": "^5.3.2",
     "react-refresh": "^0.10.0",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-plugin-serve": "^1.4.1"
+    "webpack": "^5.52.1",
+    "webpack-cli": "^4.8.0",
+    "webpack-plugin-serve": "^1.5.0"
   },
   "scripts": {
     "start": "webpack --watch",
