--- a/examples/typescript-with-swc/package.json
+++ b/examples/typescript-with-swc/package.json
@@ -8,9 +8,10 @@
   },
   "devDependencies": {
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.0",
-    "@swc/core": "^1.2.85",
+    "@swc/core": "^1.2.88",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
+    "core-js": "^3.17.3",
     "cross-env": "^7.0.3",
     "fork-ts-checker-webpack-plugin": "^6.3.3",
     "html-webpack-plugin": "^5.3.2",
@@ -19,7 +20,7 @@
     "typescript": "4.4.3",
     "webpack": "^5.52.1",
     "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-dev-server": "^4.1.1"
   },
   "scripts": {
     "start": "webpack serve --hot",
