--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,6 +31,7 @@
       },
       "globals": {
         "__DEBUG__": true,
+        "WDS_VERSION": true,
         "WEBPACK_VERSION": true,
         "browser": true
       },
