--- a/package.json
+++ b/package.json
@@ -97,13 +97,15 @@
     "prettier": "^2.3.0",
     "puppeteer": "^9.1.1",
     "react-refresh": "^0.10.0",
+    "semver": "^7.3.5",
     "sourcemap-validator": "^2.1.0",
     "type-fest": "^1.4.0",
     "typescript": "4.4.3",
     "webpack": "^5.42.0",
     "webpack-cli": "^4.7.2",
     "webpack-cli.legacy": "npm:webpack-cli@3.x",
-    "webpack-dev-server": "^3.11.2",
+    "webpack-dev-server": "^4.2.1",
+    "webpack-dev-server.legacy": "npm:webpack-dev-server@3.x",
     "webpack-hot-middleware": "^2.25.0",
     "webpack-plugin-serve": "^1.4.1",
     "webpack.legacy": "npm:webpack@4.x",
