--- a/package.json
+++ b/package.json
@@ -96,7 +96,7 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^2.3.0",
     "puppeteer": "^9.1.1",
-    "react-refresh": "^0.10.0",
+    "react-refresh": "^0.11.0",
     "semver": "^7.3.5",
     "sourcemap-validator": "^2.1.0",
     "type-fest": "^1.4.0",
@@ -114,7 +114,7 @@
   },
   "peerDependencies": {
     "@types/webpack": "4.x || 5.x",
-    "react-refresh": "^0.10.0",
+    "react-refresh": ">=0.10.0 <1.0.0",
     "sockjs-client": "^1.4.0",
     "type-fest": ">=0.17.0 <3.0.0",
     "webpack": ">=4.43.0 <6.0.0",
